# f1-cli

./: .editorconfig  .gitignore  Cargo.toml  DELIVERY.txt  IMPLEMENTATION_SUMMARY.md  PROJECT_STRUCTURE.txt  QUICKSTART.md  README.md  RESTRUCTURING_SUMMARY.md  api.js  index.js  package.json  state.js  ui.js
docs/: ARCHITECTURE.md  SETUP.md
src/: api.rs  app.rs  event.rs  index.js  main.rs  state.rs  ui.rs
src/api/: openf1Client.js
src/state/: stateManager.js
src/ui/: colors.js  dashboard.rs  footer.rs  formatters.js  header.rs  loading.rs  mod.rs  renderer.js  standings.rs  theme.rs  timing.rs
src/utils/: constants.js  errorHandler.js  logger.js
