[package]
name = "f1-dashboard"
version = "1.0.0"
edition = "2021"
authors = ["F1 Fans"]

[dependencies]
# TUI & Rendering
ratatui = { version = "0.26", features = ["serde"] }
crossterm = { version = "0.27", features = ["serde"] }

# Async & Networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "f1-dashboard"
path = "src/main.rs"
