[package]
name = "f1-dashboard"
version = "2.0.0"
edition = "2021"
authors = ["F1 Fans"]
description = "Beautiful F1 live timing TUI in your terminal"

[dependencies]
# TUI & Rendering
ratatui = "0.27"
crossterm = "0.27"

# Async & Networking
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
chrono = "0.4"
thiserror = "1.0"
anyhow = "1.0"
unicode-width = "0.1"

[[bin]]
name = "f1-dashboard"
path = "src/main.rs"
